--- a/app.json
+++ b/app.json
@@ -4,8 +4,9 @@
     "web": {
       "bundler": "metro"
     },
-    "name": "react_native_jobs",
-    "slug": "react_native_jobs",
+    "name": "Job Hunt",
+    "slug": "Job-Hunt",
+    "icon": "./assets/icon.png",
     "extra": {
       "eas": {
         "projectId": "5b62621b-08b5-41e6-bafb-c8ab9062e93f"
